build_log_3.txt
Added cuDNN to PATH: C:\Program Files\NVIDIA\CUDNN\v9.6\bin\12.6\x64
Added cl.exe to PATH: C:\Program Files\Microsoft Visual Studio\18\Community\VC\Tools\MSVC\14.50.35717\bin\Hostx64\x64
        Info `tauri` dependency has workspace inheritance enabled. The features array won't be automatically rewritten. Expected features: []
        Info Looking up installed tauri packages to check mismatched versions...
     Running beforeBuildCommand `npm --prefix ui run build`

> ui@0.1.0 build
> next build

Γû▓ Next.js 16.2.1 (Turbopack)

  Creating an optimized production build ...
Γ£ô Compiled successfully in 6.0s
  Running TypeScript ...
  Finished TypeScript in 5.4s ...
  Collecting page data using 8 workers ...
  Generating static pages using 8 workers (0/7) ...
  Generating static pages using 8 workers (1/7) 
  Generating static pages using 8 workers (3/7) 
  Generating static pages using 8 workers (5/7) 
Γ£ô Generating static pages using 8 workers (7/7) in 1172ms
  Finalizing page optimization ...

Route (app)
Γöî Γùï /
Γö£ Γùï /_not-found
Γö£ Γùï /about
Γö£ Γùï /icon.png
Γö£ Γùï /settings
Γöö Γùï /splashscreen


Γùï  (Static)  prerendered as static content

   Compiling candle-kernels v0.9.2 (https://github.com/mayocream/candle?branch=cuda-dynamic-loading#b7a98f1d)
warning: function `set_cache_dir` is never used
  --> koharu-types\src\image.rs:11:8
   |
11 | pub fn set_cache_dir(path: PathBuf) -> anyhow::Result<()> {
   |        ^^^^^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: `koharu-types` (lib) generated 1 warning
   Compiling rfd v0.17.2
   Compiling base64 v0.22.1
   Compiling data-encoding v2.10.0
   Compiling tauri-runtime-wry v2.10.1
   Compiling ttf-parser v0.21.1
   Compiling unicode_categories v0.1.1
   Compiling tracing-subscriber v0.3.23
   Compiling clap v4.6.0
   Compiling strum v0.28.0
   Compiling fontique v0.7.0
   Compiling libwebp-sys v0.9.6
   Compiling tauri-plugin-updater v2.10.0
   Compiling icu v2.1.1
   Compiling tiny-skia v0.12.0
   Compiling chacha20 v0.10.0
   Compiling tokenizers v0.22.2
   Compiling tauri-codegen v2.5.5
   Compiling tauri-runtime v2.10.1
   Compiling tungstenite v0.28.0
   Compiling wry v0.54.3
   Compiling tao v0.34.6
   Compiling harfrust v0.5.2
   Compiling skrifa v0.40.0
   Compiling softbuffer v0.4.8
   Compiling keyboard-types v0.7.0
   Compiling minijinja v2.17.1
   Compiling fontdue v0.9.3
   Compiling serialize-to-javascript-impl v0.1.2
   Compiling rmp v0.8.15
   Compiling bumpalo v3.20.2
   Compiling rmcp v0.16.0
   Compiling zopfli v0.8.3
   Compiling serialize-to-javascript v0.1.2
   Compiling koharu-renderer v0.37.0 (C:\Users\b_cer\Downloads\APPProject\koharu\koharu-renderer)
   Compiling tauri-macros v2.5.5
   Compiling muda v0.17.1
   Compiling tokio-tungstenite v0.28.0
   Compiling rand v0.10.0
   Compiling webp v0.3.1
   Compiling window-vibrancy v0.6.0
   Compiling keyring v3.6.3
   Compiling axum-core v0.5.6
   Compiling sse-stream v0.2.1
   Compiling rmcp-macros v0.16.0
   Compiling tokio-stream v0.1.18
   Compiling serde_repr v0.1.20
   Compiling serde_path_to_error v0.1.20
   Compiling csv-core v0.1.13
   Compiling windows-threading v0.2.1
   Compiling open v5.3.3
   Compiling matchit v0.8.4
   Compiling heck v0.5.0
   Compiling natord v1.0.9
   Compiling fastrand v2.3.0
   Compiling pastey v0.2.1
   Compiling tauri v2.10.3
   Compiling tempfile v3.27.0
   Compiling axum v0.8.8
   Compiling windows-future v0.3.2
   Compiling csv v1.4.0
   Compiling zip v8.2.0
   Compiling rmpv v1.3.1
   Compiling rmp-serde v1.3.1
   Compiling windows-collections v0.3.2
   Compiling windows-numerics v0.3.1
   Compiling koharu v0.37.0 (C:\Users\b_cer\Downloads\APPProject\koharu\koharu)
   Compiling zip v4.6.1
   Compiling git-version-macro v0.3.9
   Compiling minisign-verify v0.2.5
   Compiling windows v0.62.2
   Compiling koharu-runtime v0.37.0 (C:\Users\b_cer\Downloads\APPProject\koharu\koharu-runtime)
   Compiling git-version v0.3.9
   Compiling winreg v0.55.0
   Compiling candle-core v0.9.2 (https://github.com/mayocream/candle?branch=cuda-dynamic-loading#b7a98f1d)
   Compiling candle-nn v0.9.2 (https://github.com/mayocream/candle?branch=cuda-dynamic-loading#b7a98f1d)
   Compiling candle-transformers v0.9.2 (https://github.com/mayocream/candle?branch=cuda-dynamic-loading#b7a98f1d)
   Compiling koharu-ml v0.37.0 (C:\Users\b_cer\Downloads\APPProject\koharu\koharu-ml)
   Compiling koharu-pipeline v0.37.0 (C:\Users\b_cer\Downloads\APPProject\koharu\koharu-pipeline)
error[E0425]: cannot find type `PathBuf` in this scope
  --> koharu-pipeline\src\lib.rs:22:21
   |
22 |     pub state_path: PathBuf,
   |                     ^^^^^^^ not found in this scope
   |
help: consider importing this struct
   |
 6 + use std::path::PathBuf;
   |

error[E0425]: cannot find type `PathBuf` in this scope
  --> koharu-pipeline\src\lib.rs:23:20
   |
23 |     pub cache_dir: PathBuf,
   |                    ^^^^^^^ not found in this scope
   |
help: consider importing this struct
   |
 6 + use std::path::PathBuf;
   |

error[E0382]: borrow of moved value: `guard`
   --> koharu-pipeline\src\ops\core.rs:215:8
    |
208 |     let mut guard = state.state.write().await;
    |         --------- move occurs because `guard` has type `tokio::sync::RwLockWriteGuard<'_, koharu_types::State>`, which does not implement the `Copy` trait
...
213 |     drop(guard);
    |          ----- value moved here
214 |     save_state(&state).await?;
215 |     Ok(guard.documents.len())
    |        ^^^^^ value borrowed here after move
    |
    = note: borrow occurs due to deref coercion to `koharu_types::State`
note: deref defined here
   --> C:\Users\b_cer\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\tokio-1.50.0\src\sync\rwlock\write_guard.rs:413:5
    |
413 |     type Target = T;
    |     ^^^^^^^^^^^

Some errors have detailed explanations: E0382, E0425.
For more information about an error, try `rustc --explain E0382`.
error: could not compile `koharu-pipeline` (lib) due to 3 previous errors
warning: build failed, waiting for other jobs to finish...
failed to build app: failed to build app
       Error failed to build app: failed to build app
